[package]
name = "cryptoshift"
version = "0.1.0"
edition = "2021"
authors = ["CryptoShift Team"]
description = "A crypto-agility SDK for migrating from classical to post-quantum cryptography"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cryptoshift/cryptoshift"
keywords = ["cryptography", "post-quantum", "pqc", "migration", "security"]
categories = ["cryptography", "development-tools"]

[dependencies]
# Core crypto primitives
ring = "0.17"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
rsa = "0.9"
pkcs8 = { version = "0.10", features = ["std", "pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = "0.16"

# Post-quantum cryptography (we'll add these when implementing PQC)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async support
tokio = { version = "1.0", features = ["full"], optional = true }

# Hashing and utilities
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Configuration
config = "0.14"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = ["std"]
std = []
async = ["tokio"]
cli = ["clap", "hex"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "cryptoshift"
path = "src/bin/cryptoshift.rs"
required-features = ["cli"]
