[package]
name = "cryptoshift-node"
version = "0.3.0"
edition = "2021"
description = "Node.js bindings for CryptoShift crypto-agility SDK"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cryptoshift = { path = "../.." }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
bincode = "1.3"
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
