[package]
name = "cryptoshift-py"
version = "0.3.0"
edition = "2021"
description = "Python bindings for CryptoShift crypto-agility SDK"
license = "MIT OR Apache-2.0"

[lib]
name = "cryptoshift_native"
crate-type = ["cdylib"]

[dependencies]
cryptoshift = { path = "../.." }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
serde_json = "1.0"
bincode = "1.3"
