[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cryptoshift"
version = "0.3.0"
description = "Crypto-agility SDK for post-quantum migration"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py38"]
python-source = "python"
module-name = "cryptoshift._native"
